--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,7 +3,7 @@ version: "3"
 services:
 
   hadoop-master:
-    image: activitystream/hadoop-spark-cluster
+    image: registry.activitystream.com:5043/hadoop-spark-cluster
     ports:
       - 50070:50070
       - 50010:50010
@@ -26,7 +26,7 @@ services:
     command: ./run.sh
 
   hadoop-slave1:
-    image: activitystream/hadoop-spark-cluster
+    image: registry.activitystream.com:5043/hadoop-spark-cluster
     networks:
       - hadoop
     hostname: hadoop-slave1
@@ -34,7 +34,7 @@ services:
       placement:
         constraints: [node.hostname == swarm2]
   hadoop-slave2:
-    image: activitystream/hadoop-spark-cluster
+    image: registry.activitystream.com:5043/hadoop-spark-cluster
     networks:
       - hadoop
     hostname: hadoop-slave2
