--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,12 +17,14 @@ services:
     networks:
       - hadoop
     hostname: hadoop-master
+    environment: 
+      - SPARK_MASTER_HOST=0.0.0.0
     depends_on: 
       - hadoop-slave1
       - hadoop-slave2
     deploy:
       placement:
-        constraints: [node.hostname == swarm1]
+        constraints: [node.labels.hadoop.role == master]
     command: ./run.sh
 
   hadoop-slave1:
@@ -32,7 +34,7 @@ services:
     hostname: hadoop-slave1
     deploy:
       placement:
-        constraints: [node.hostname == swarm2]
+        constraints: [node.labels.hadoop.role == node1]
   hadoop-slave2:
     image: registry.activitystream.com:5043/hadoop-spark-cluster
     networks:
@@ -40,7 +42,7 @@ services:
     hostname: hadoop-slave2
     deploy:
       placement:
-        constraints: [node.hostname == swarm3]
+        constraints: [node.labels.hadoop.role == node2]
 
 networks:
   hadoop:
