--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -21,10 +21,20 @@ services:
     depends_on: 
       - hadoop-slave1
       - hadoop-slave2
+      - hadoop-slave3
     deploy:
       placement:
         constraints: [node.labels.hadoop.role == master]
     command: ./run.sh
+
+  hadoop-slave3:
+    image: registry.activitystream.com:5043/hadoop-spark-cluster
+    networks:
+      - hadoop
+    hostname: hadoop-slave3
+    deploy:
+      placement:
+        constraints: [node.labels.hadoop.role == master]
 
   hadoop-slave1:
     image: registry.activitystream.com:5043/hadoop-spark-cluster
@@ -34,7 +44,7 @@ services:
     deploy:
       placement:
         constraints: [node.labels.hadoop.role == node1]
-        
+
   hadoop-slave2:
     image: registry.activitystream.com:5043/hadoop-spark-cluster
     networks:
